# courtvision

./: README.md
backend-api/: pyproject.toml  requirements.txt
backend-api/app/: __init__.py  main.py
backend-api/app/api/: dependencies.py
backend-api/app/api/routes/: match.py  predict.py
backend-api/app/schemas/: player.py
backend-api/app/services/: motion_matcher.py  prediction_service.py
backend-api/tests/: conftest.py  test_match_route.py  test_motion_matcher.py  test_predict_route.py  test_prediction_service.py  test_schemas.py
frontend-web/: package-lock.json  package.json
frontend-web/src/: App.tsx  index.css  types.ts
frontend-web/src/api/: predict.ts
frontend-web/src/components/: HalfCourt.tsx  PlayerDot.tsx  StatusBar.tsx
model-training/: train_lora_llama3.py
